# moffragmentor

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  00_core.ipynb  01_sbu.ipynb  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  create_conda.sh  index.ipynb  pyproject.toml  pytest.ini  requirements.txt  settings.ini  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: changelog.yml  pre_commit.yml  python_package.yml  release_me.yml
dev/: 20220125_compute_charges.ipynb  20220203_compute_charges.ipynb  20220203_fragment_parts.ipynb  20220204_debug_andres_node.ipynb  20220413_acetate_test.ipynb  20220413_debug_new_issue.ipynb  20220413_formate_fix.ipynb  20220413_pubchem.ipynb  20220414_jaccard_distance.ipynb  ABEDAQ.cif  bla.cif  mudon_linker.cif
dev_notebooks/: AKEDIF_clean_linker_6.xyz  tobacco_input_file.ipynb
docs/: _config.yml  conf.py  core.html  descriptor_fragments.cdxml  environment.yml  index.html  sbu.html  sidebar.json
docs/_data/: topnav.yml
docs/source/: api.rst  background.rst  conf.py  getting_started.rst  index.rst
examples/: 20220413_formate_fix.ipynb  example_splitting.ipynb  graph.dot  make_linker_from_smiles.ipynb
examples/cleaned/: ELUSEM_ase_clean.cif  ELUTAJ_clean_clean.cif  ELUTEN_clean.cif  ELUTIR_clean.cif  elutir_ase_clean_clean.cif
moffragmentor/: __init__.py  _nbdev.py  core.py  descriptors.py  fragmentor.py  mof.py  molecule.py  net.py  sbu.py  utils.py
moffragmentor-0.0.1.dev0/: CONTRIBUTING.rst  LICENSE  MANIFEST.in  PKG-INFO  README.md  setup.cfg  tox.ini
moffragmentor-0.0.1.dev0/docs/source/: api.rst  background.rst  conf.py
moffragmentor-0.0.1.dev0/docs/source/_static/: branching_point.cdxml
moffragmentor-0.0.1.dev0/examples/: 20220224_zhou_test_cases.ipynb  make_linker_from_smiles.ipynb
moffragmentor-0.0.1.dev0/examples/cleaned/: ELUSIQ_clean_clean.cif
moffragmentor-0.0.1.dev0/examples/zhou_bbs/: harvest_results.csv
moffragmentor-0.0.1.dev0/examples/zhou_bbs/ELUSEM_ase_clean/: linker_0.pkl  node_0.pkl  node_1.pkl
moffragmentor-0.0.1.dev0/examples/zhou_bbs/ELUSIQ_clean_clean/: linker_1.pkl  linker_2.pkl  node_0.pkl  node_1.pkl
moffragmentor-0.0.1.dev0/examples/zhou_bbs/ELUTAJ_clean_clean/: linker_0.pkl  linker_3.pkl  linker_4.pkl  linker_7.pkl  mof.pkl  node_0.pkl  node_1.pkl  node_2.pkl  node_3.pkl
moffragmentor-0.0.1.dev0/examples/zhou_bbs/ELUTEN_clean/: linker_1.pkl  mof.pkl
moffragmentor-0.0.1.dev0/examples/zhou_bbs/ELUTIR_clean/: descriptors.csv  linker_2.pkl  mof.pkl  node_0.pkl  node_1.pkl
moffragmentor-0.0.1.dev0/examples/zhou_bbs/elutir_ase_clean_clean/: linker_2.pkl  linker_4.pkl  linker_6.pkl  linker_7.pkl  node_1.pkl
moffragmentor-0.0.1.dev0/src/moffragmentor/: __init__.py  net.py  version.py
moffragmentor-0.0.1.dev0/src/moffragmentor/fragmentor/: __init__.py  branching_points.py  filter.py  linkerlocator.py  solventlocator.py  splitter.py
moffragmentor-0.0.1.dev0/src/moffragmentor/harvester/: harvest_building_blocks.py
moffragmentor-0.0.1.dev0/src/moffragmentor/molecule/: nonsbumolecule.py  nonsbumoleculecollection.py
moffragmentor-0.0.1.dev0/src/moffragmentor/sbu/: linker.py  sbu.py  sbucollection.py
moffragmentor-0.0.1.dev0/src/moffragmentor/utils/: __init__.py  mol_compare.py  periodic_graph.py
moffragmentor-0.0.1.dev0/src/moffragmentor/utils/data/: tuned_vesta.yml
moffragmentor-0.0.1.dev0/tests/: test_branching_points.py  test_mof.py  test_molecule.py
moffragmentor-0.0.1.dev0/tests/descriptors/: test_sbu_dimensionality.py
moffragmentor-0.0.1.dev0/tests/fragmentor/: test_splitter.py
moffragmentor-0.0.1.dev0/tests/test_files/: 1585873-1585874.cif  ABAXIN.cif  PUBSOV_clean.cif  RSM3434.cif  SDU-1.cif  TBAPy_Ti_Andres.cif  WETPES_clean.cif
moffragmentor/analyzer/: sbu_dimensionality.py
moffragmentor/cli/: __init__.py
moffragmentor/descriptors/: __init__.py  net.py  sbu_dimensionality.py
moffragmentor/fragmentor/: __init__.py  _graphsearch.py  filter.py  fragmentor.py  linkerlocator.py  locator.py  molfromgraph.py  nodelocator.py  prettier.py  solventlocator.py  splitter.py  utils.py
moffragmentor/harvester/: __init__.py  harvest_building_blocks.py  harvest_net_features.py
moffragmentor/molecule/: __init__.py  nonsbumolecule.py  nonsbumoleculecollection.py
moffragmentor/sbu/: __init__.py  linker.py  linkercollection.py  node.py  nodecollection.py  sbu.py  sbucollection.py
moffragmentor/utils/: __init__.py  errors.py  periodic_graph.py  plotting.py  systre.py
src/moffragmentor/: __init__.py  mof.py  net.py  net_.py  systre.license  version.py
tests/: conftest.py  test_branching_points.py  test_fragmentor.py  test_mof.py  test_molecule.py  test_sbu.py  test_sbu_collection.py  test_systre.py
tests/analyzer/: test_sbu_dimensionality.py
tests/descriptors/: test_sbu_dimensionality.py
tests/fragmentor/: building_block_regression_test.py  net_regression_test.py  test_filters.py  test_locator.py  test_splitter.py
tests/test_files/: 2dmof.cif  BAMHIJ.cif  BOXFOK.cif  HKUST-1.cif  LASYOU.cif  LIKGUJ.cif  LISZOE.cif  LOWQIX.cif  MAGBON.cif  NIYZIG.cif  RSM3317.cif  TBAPy_Ti_Andres.cif  WIHSUD_clean.cif  Zn-MOF-74.cif  bcs_v1-litcic_1B_4H_Ch_opt_charge.cif  c3cc49684h3.cif  hkust1.cif  porphyrin_mof.cif  test_graph_biphenyl_dicarboxy.graphml
tests/utils/: test_mol_compare.py  test_periodic_graphs.py  test_utils.py
tests_harvest/: harvest_results.csv
tests_harvest/HKUST-1/: descriptors.csv  linker_0.pkl  mof.pkl  node_0.pkl
tests_harvest/KAJZIH_freeONLY/: descriptors.csv  linker_0.pkl  linker_1.pkl  linker_2.pkl  linker_3.pkl  linker_4.pkl  linker_5.pkl  linker_6.pkl  linker_7.pkl  mof.pkl  node_0.pkl  node_1.pkl  node_2.pkl  node_3.pkl  node_4.pkl  node_5.pkl
tests_harvest/LASYOU/: descriptors.csv  linker_0.pkl  linker_1.pkl  linker_2.pkl  mof.pkl  node_0.pkl  node_1.pkl  node_2.pkl
tests_harvest/OFOCUI_clean/: descriptors.csv  linker_0.pkl  linker_1.pkl  linker_10.pkl  linker_11.pkl  linker_2.pkl  linker_3.pkl  linker_4.pkl  linker_5.pkl  linker_6.pkl  linker_7.pkl  mof.pkl  (+14 more)
(+93 files in other folders)
