[metadata]
name = moffragmentor
version = 0.0.1
description = Splits MOFs into metal nodes and linkers.
author = Kevin Maik Jablonka
author_email = mail@kjablonka.com
maintainer_email = mail@kjablonka.com
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/kjappelbaum/moffragmentor
download_url =https://github.com/kjappelbaum/moffragmentor/releases
project_urls =
    Bug Tracker = https://github.com/kjappelbaum/moffragmentor/issues
    Source Code = https://github.com/kjappelbaum/moffragmentor/


license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    mof
    chemistry
    materials-science
    reticular-chemistry
    SBU
    topology
    net
    fragmentation
    building-blocks


[options]
install_requires =
    pymatgen
    click
    backports.cached_property
    networkx
    pyyaml
    timeout_decorator # timeout-decorator on conda-forge
    joblib
    loguru
    ase
    #Todo: perhaps make nglview optional?
    nglview
    rdkit
    mofchecker
    scikit-spatial # scikit-spatial on conda
    pubchempy
    more_itertools
    structuregraph_helpers


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src


[options.extras_require]
pubchem = pubchempy
lint = 
    isort
    black
    flake8
    pre-commit
    bumpversion
tests =
    pytest
    tox
    coverage
docs =
    sphinx
    furo
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi

[options.entry_points]
console_scripts =
    run_harvest = moffragmentor.cli:run_harvest

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = moffragmentor
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/moffragmentor
    .tox/*/lib/python*/site-packages/moffragmentor

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short
