[metadata]
name = moffragmentor
version = 0.0.6
description = Splits MOFs into metal nodes and linkers.
author = Kevin Maik Jablonka
author_email = mail@kjablonka.com
maintainer_email = mail@kjablonka.com
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/kjappelbaum/moffragmentor
download_url =https://github.com/kjappelbaum/moffragmentor/releases
project_urls =
    Bug Tracker = https://github.com/kjappelbaum/moffragmentor/issues
    Source Code = https://github.com/kjappelbaum/moffragmentor/


license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    mof
    chemistry
    materials-science
    reticular-chemistry
    SBU
    topology
    net
    fragmentation
    building-blocks


[options]
install_requires =
    pymatgen
    click
    backports.cached_property
    networkx
    pyyaml
    timeout_decorator # timeout-decorator on conda-forge
    joblib
    loguru
    ase
    #Todo: perhaps make nglview optional?
    nglview
    rdkit
    scikit-spatial # scikit-spatial on conda
    pubchempy
    more_itertools
    structuregraph_helpers


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src


[options.extras_require]
pubchem = pubchempy
lint = 
    isort
    black
    flake8
    bumpversion
tests =
    pytest
    tox
    coverage
    pytest-xdist
docs =
    sphinx
    furo
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    sphinx_copybutton

[options.entry_points]
console_scripts =
    run_harvest = moffragmentor.cli:run_harvest

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = moffragmentor
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/moffragmentor
    .tox/*/lib/python*/site-packages/moffragmentor

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short


#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
    S101 # Complaining about assert statements
    D101 # Docstring missing
    D102 # Docstring missing
    D103 # Docstring missing
    D104 # Docstring missing
    D400
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    moffragmentor
    tests
per-file-ignores =
    tests/*/*.py:DAR101, D205, D100, DAR101, DAR201, D209