[metadata]
name = moffragmentor
version = 0.0.1-dev
description = Splits MOFs into metal nodes and linkers.
author = Kevin Maik Jablonka
author_email = mail@kjablonka.com
maintainer_email = mail@kjablonka.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kjappelbaum/moffragmentor
download_url = https://github.com/kjappelbaum/moffragmentor/releases
project_urls = 
	Bug Tracker = https://github.com/kjappelbaum/moffragmentor/issues
	Source Code = https://github.com/kjappelbaum/moffragmentor/
license = MIT
license_file = LICENSE
classifiers = 
	Development Status :: 1 - Planning
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Framework :: Pytest
	Framework :: tox
	Framework :: Sphinx
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3 :: Only
keywords = 
	mof
	chemistry
	materials-science
	reticular-chemistry
	SBU
	topology
	net
	fragmentation
	building-blocks

[options]
install_requires = 
	pymatgen
	click
	backports.cached_property
	networkx
	pyyaml
	timeout_decorator
	joblib
	loguru
	ase
	nglview
	rdkit
zip_safe = false
include_package_data = True
python_requires = >=3.8
packages = find:
package_dir = 
	= src

[options.packages.find]
where = src

[options.extras_require]
pubchem = pubchempy

[options.entry_points]
console_scripts = 
	run_harvest = moffragmentor.cli:run_harvest
	run_net_harvest = moffragmentor.cli:run_net_harvest

[doc8]
max-line-length = 120

[coverage:run]
branch = True
source = moffragmentor
omit = 
	tests/*
	docs/*

[coverage:paths]
source = 
	src/moffragmentor
	.tox/*/lib/python*/site-packages/moffragmentor

[coverage:report]
show_missing = True
exclude_lines = 
	pragma: no cover
	raise NotImplementedError
	if __name__ == .__main__.:
	def __str__
	def __repr__

[darglint]
docstring_style = google
strictness = short

[egg_info]
tag_build = 
tag_date = 0

